# active_aerial_survey

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/: active_survey.h  active_survey_param.h  behaviour_controller.h  behaviour_planner.h  environment_model.h  gaussian_field.h  grid.h  grid_cell.h  mav.h  mav_controller.h  plan.h  random_environment_generator.h  sensor.h  utility.h  waypoint.h
include/environment_model/: environment_model.h  gaussian_field.h  grid.h  grid_cell.h  grid_segment.h  random_environment_generator.h
include/math/: graph.h  graph_node.h  polygon.h
include/mav/: mav.h  sensor.h
include/planner/: behaviour_controller.h  behaviour_planner.h  plan.h  trajectory_optimizer.h  trajectory_planner.h  waypoint.h
launch/: active_survey.launch  batchrun.launch  batchrun_param.yaml  sim.launch  sim_param.yaml
src/: active_survey.cpp  active_survey_node.cpp  active_survey_param.cpp  behaviour_controller.cpp  behaviour_planner.cpp  environment_model.cpp  gaussian_field.cpp  grid.cpp  grid_cell.cpp  mav.cpp  mav_controller.cpp  plan.cpp  sensor.cpp  waypoint.cpp
src/environment_model/: environment_model.cpp  gaussian_field.cpp  grid.cpp  grid_cell.cpp  grid_segment.cpp
src/math/: graph.cpp  graph_node.cpp
src/mav/: mav.cpp  mav_controller.cpp  sensor.cpp
src/planner/: behaviour_controller.cpp  behaviour_planner.cpp  plan.cpp  trajectory_optimizer.cpp  waypoint.cpp
